# lignum

./: jigger.py  pyproject.toml  readme.md  requirements_dev.txt  test_jigger.py  test_lignum.py
.github/workflows/: workflow.yml
lignum/: __init__.py
